--- a/website/styles1.css
+++ b/website/styles1.css
@@ -8,8 +8,15 @@ html,body{
   height: 100%;
 }
 
+.responsive {
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+}
+
 .container{
   min-height: 100%;
+  width: 100vw;
 }
 
 .main{
@@ -163,6 +170,11 @@ a.button2:hover{
 }
 
 @media (max-width: 600px){
+
+.container{
+  width: auto;
+}
+
   .toggle-button{
     display: flex;
   }
@@ -206,5 +218,19 @@ a.button2:hover{
   a.button1:hover{
     color:black;
     background-color:white;
+  }
+
+  .main{
+    padding-bottom: 50px;
+  }
+
+  .right{
+    visibility: hidden;
+    display: none;
+  }
+
+  .footer{
+    visibility: hidden;
+    display: none;
   }
 }
