--- a/website/mainStyle.css
+++ b/website/mainStyle.css
@@ -46,11 +46,11 @@
 .rectangleBackground{
   margin: 0 auto;
   display: inline-block;
-  max-width: 250px;
+  max-width: 100%;
   max-height: 395px;
   position: relative;
   color: black;
-  text-align: left;
+  text-align: center;
 }
 
 .squareBackground{
@@ -58,7 +58,7 @@
   margin-left: 20px;
   margin-right: 20px;
   display: inline-block;
-  max-width: 250px;
+  max-width: 100%;
   max-height: 261;
   position: relative;
   color: black;
